--- a/src/HtmlToPdf/HtmlToPdf.csproj
+++ b/src/HtmlToPdf/HtmlToPdf.csproj
@@ -11,6 +11,7 @@
 	<ItemGroup>
 		<PackageReference Include="DinkToPdf" Version="1.0.8" />
 		<PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.20.0" />
+		<PackageReference Include="Microsoft.Azure.WebJobs.Extensions.OpenApi" Version="1.0.0" />
 		<PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.1" />
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.16.1" />
 	</ItemGroup>
